--- a/package.json
+++ b/package.json
@@ -7,17 +7,27 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@vercel/postgres": "^0.8.0",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
+    "lucide-react": "^0.446.0",
     "next": "15.0.0-canary.56",
     "next-auth": "5.0.0-beta.19",
     "postcss": "8.4.38",
     "react": "19.0.0-rc-f38c22b244-20240704",
     "react-dom": "19.0.0-rc-f38c22b244-20240704",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.5.2",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
